# subsourceCLI

./: .gitignore  AGENTS.md  README.md  faREADME.md  gui.py  script.py
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-01-dearpygui-ui.md
sub-rs/: Cargo.toml
sub-rs/src/: client.rs  gui.rs  main.rs  scan.rs
subsourceCLI/: README.md  faREADME.md  pyproject.toml
subsourceCLI/src/subsourceCLI/: __init__.py  __main__.py  api.py  cli.py  downloader.py
