[package]
name = "sub-rs"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
strsim = "0.11"
anyhow = "1"
egui = "0.30"
eframe = "0.30"
rfd = "0.15"
dirs = "6"
